# docker-m1-development-src

./: .gitignore  Dockerfile  Dockerfile.debian  Dockerfile.rhel  README.md  Vagrantfile  bootstrap.sh  install.conf.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: settings.yml
config/: bootstrap.sh  install.conf.yaml
