[tool.poetry]
name = "vagrant-docker-m1"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.8.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
poetry = "^1.1.11"
yamllint = "^1.26.3"
bandit = "^1.7.1"
black = "^21.11b1"
flake8 = "^4.0.1"
mypy = "^0.910"
pylint = "^2.11.1"
ansible-lint = "^5.2.1"
mkdocs = "^1.2.3"
autopep8 = "^1.6.0"
pycodestyle = "^2.8.0"
pip-tools = "^6.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
